# cool_chip

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
notebooks/: Untitled.ipynb  cadquery_fin_design.ipynb  cool_chip_fin_module.ipynb  geometry.ipynb
report/: README.md  latexmkrc  main.bib  main.tex
report/sections/: abstract.tex  acknowledgement.tex  base_solution.tex  discussion.tex  future.tex  hypothesis.tex  introduction.tex  literature.tex  model_problem.tex  results.tex  simulation.tex
src/cool_chip/: __init__.py
src/cool_chip/analysis/: demo.py
src/cool_chip/geometry/: __init__.py  fin.py
src/cool_chip/utils/: io.py
tests/: test_cool_chip.py
