[tool.poetry]
name = "cool_chip"
version = "0.1.0"
description = ""
authors = ["Ankur Kumar <ank@leoank.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bibcure = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
